Step nan count approach

--- a/6.2022/similar.ipynb
+++ b/6.2022/similar.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this approach takes a VERY long time and, at first glance, doesn't give a fundamental advantage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -605,124 +612,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# check that there are no NaN\n",
-    "predicted.isna().any().any()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 13.6 s, sys: 145 ms, total: 13.7 s\n",
-      "Wall time: 13.9 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# collect predictions\n",
-    "sub = pd.read_csv(aux.sub_path)\n",
-    "predict = sub['row-col'].str.split('-').apply(lambda bundle: predicted.loc[int(bundle[0]), bundle[1]])\n",
-    "sub['value'] = predict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>row-col</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0-F_1_14</td>\n",
-       "      <td>0.008382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0-F_3_23</td>\n",
-       "      <td>0.005871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1-F_3_24</td>\n",
-       "      <td>-0.005925</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2-F_1_2</td>\n",
-       "      <td>0.003427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2-F_4_2</td>\n",
-       "      <td>-0.083969</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    row-col     value\n",
-       "0  0-F_1_14  0.008382\n",
-       "1  0-F_3_23  0.005871\n",
-       "2  1-F_3_24 -0.005925\n",
-       "3   2-F_1_2  0.003427\n",
-       "4   2-F_4_2 -0.083969"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sub.to_csv('submission.csv', index=False)\n",
-    "sub.head()"
+    "aux.save_submission(predicted)"
    ]
   },
   {
