Impl. cosine similarity
It works a bit unstable with large data

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -67,15 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aux.calc_score(aux.data, predicted)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,14 +75,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # fill all NaN, train on notNA only (0.98242)\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
+    "#                                     'max_fill_nan_count': np.inf, 'max_train_nan_count': 0}),\n",
+    "#     (aux.simplestat, 'all', SimpleImputer(strategy='mean')),\n",
+    "# ).run(aux.data, inherit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # fill rows with only 1 NaN, train on notNA only; other NaN fill with mean (1.02633)\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
+    "#                                     'max_fill_nan_count': 1, 'max_train_nan_count': 0}),\n",
+    "#     (aux.simplestat, 'all', SimpleImputer(strategy='mean')),\n",
+    "# ).run(aux.data, inherit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # fill rows with only 1 NaN, train on whole data; other NaN fill with mean (1.03272)\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
+    "#                                     'max_fill_nan_count': 1, 'max_train_nan_count': np.inf}),\n",
+    "#     (aux.simplestat, 'all', SimpleImputer(strategy='mean')),\n",
+    "# ).run(aux.data, inherit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # fill rows with only 1 NaN, train on notNA only; other NaN fill with group mean\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
+    "#                                     'max_fill_nan_count': 1, 'max_train_nan_count': 0}),\n",
+    "#     (aux.groupstat, aux.subcol[2] + aux.subcol[4], {'gcol': ['F_2_2']}),       # F_2_2 nunique = 11, F_2_24 & F_2_10 nquniue = 18\n",
+    "# ).run(aux.data, inherit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunks: 6353\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 24/6353 [00:34<2:58:22,  1.69s/it] "
+     ]
+    }
+   ],
+   "source": [
+    "# fill all NaN with cosine similars\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    (aux.cosine_stats, 'all', {'k': 5000}),\n",
+    ").run(aux.data, inherit=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## subsets 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [20:00<00:00, 80.01s/it]\n"
+      "100%|██████████| 15/15 [00:54<00:00,  3.61s/it]\n"
      ]
     },
     {
@@ -99,40 +194,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ML Imputer avg. score: 0.5946655547740433\n"
+      "ML Imputer avg. score: 0.9438455290350334\n"
      ]
     }
    ],
    "source": [
-    "# check various parameters of NaN count\n",
+    "# fill all NaN, train on whole data\n",
     "predicted = aux.ImputeHelper(\n",
-    "    (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
+    "    (aux.ml_impute, aux.subcol[1], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=100, num_leaves=23), \n",
     "                                    'max_fill_nan_count': np.inf, 'max_train_nan_count': np.inf}),\n",
     ").run(aux.data, inherit=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = aux.ImputeHelper(\n",
-    "    (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
-    "                                    'max_fill_nan_count': np.inf, 'max_train_nan_count': 0}),\n",
-    ").run(aux.data, inherit=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [20:14<00:00, 80.95s/it]\n"
+      "100%|██████████| 15/15 [00:31<00:00,  2.08s/it]\n"
      ]
     },
     {
@@ -140,73 +223,105 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ML Imputer avg. score: 0.42641156775337585\n"
+      "ML Imputer avg. score: 0.9433812251767555\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# fill all NaN, train on notNA only\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    (aux.ml_impute, aux.subcol[1], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=100, num_leaves=23), \n",
+    "                                    'max_fill_nan_count': np.inf, 'max_train_nan_count': 0}),\n",
+    ").run(aux.data, inherit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 43.49it/s]\n"
+      "100%|██████████| 15/15 [00:49<00:00,  3.31s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimpleStat avg. score: 1.903149533816095\n"
+      "\n",
+      "ML Imputer avg. score: 0.9438455290350333\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 50.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimpleStat avg. score: 0.9390547413431811\n"
      ]
     }
    ],
    "source": [
+    "# fill rows with only 1 NaN, train on whole data; other fill with mean\n",
     "predicted = aux.ImputeHelper(\n",
-    "    (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
-    "                                    'max_fill_nan_count': 1, 'max_train_nan_count': 0}),\n",
-    "    (aux.simplestat, aux.subcol[4], SimpleImputer(strategy='mean')),\n",
+    "    (aux.ml_impute, aux.subcol[1], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=100, num_leaves=23), \n",
+    "                                    'max_fill_nan_count': 1, 'max_train_nan_count': np.inf}),\n",
+    "    (aux.simplestat, aux.subcol[1], SimpleImputer(strategy='mean')),\n",
     ").run(aux.data, inherit=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:26<00:00,  1.73s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ML Imputer avg. score: 0.9433812251767555\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 51.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimpleStat avg. score: 0.9390555595149658\n"
+     ]
+    }
+   ],
    "source": [
-    "# CHECK THIS TOO\n",
+    "# fill rows with only 1 NaN, train on notNA only\n",
     "predicted = aux.ImputeHelper(\n",
-    "    (aux.ml_impute, aux.subcol[4], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29), \n",
-    "                                    'max_fill_nan_count': 2, 'max_train_nan_count': 0}),\n",
-    "    (aux.simplestat, aux.subcol[4], SimpleImputer(strategy='mean')),\n",
+    "    (aux.ml_impute, aux.subcol[1], {'estimator': LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=100, num_leaves=23), \n",
+    "                                    'max_fill_nan_count': 1, 'max_train_nan_count': 0}),\n",
+    "    (aux.simplestat, aux.subcol[1], SimpleImputer(strategy='mean')),\n",
     ").run(aux.data, inherit=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -217,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +391,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2-F_4_2</td>\n",
-       "      <td>0.232231</td>\n",
+       "      <td>0.324838</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -288,10 +403,10 @@
        "1  0-F_3_23  0.000365\n",
        "2  1-F_3_24 -0.000817\n",
        "3   2-F_1_2  0.000551\n",
-       "4   2-F_4_2  0.232231"
+       "4   2-F_4_2  0.324838"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
