--- a/6.2022/similar.ipynb
+++ b/6.2022/similar.ipynb
@@ -22,247 +22,11 @@
     "from scipy.sparse import csr_matrix\n",
     "from implicit.als import AlternatingLeastSquares\n",
     "\n",
-    "from sklearn.pipeline import Pipeline, make_pipeline\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "from copy import deepcopy\n",
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>F_1_0</th>\n",
-       "      <th>F_1_1</th>\n",
-       "      <th>F_1_2</th>\n",
-       "      <th>F_1_3</th>\n",
-       "      <th>F_1_4</th>\n",
-       "      <th>F_1_5</th>\n",
-       "      <th>F_1_6</th>\n",
-       "      <th>F_1_7</th>\n",
-       "      <th>F_1_8</th>\n",
-       "      <th>F_1_9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>F_4_5</th>\n",
-       "      <th>F_4_6</th>\n",
-       "      <th>F_4_7</th>\n",
-       "      <th>F_4_8</th>\n",
-       "      <th>F_4_9</th>\n",
-       "      <th>F_4_10</th>\n",
-       "      <th>F_4_11</th>\n",
-       "      <th>F_4_12</th>\n",
-       "      <th>F_4_13</th>\n",
-       "      <th>F_4_14</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>row_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.354591</td>\n",
-       "      <td>-0.464038</td>\n",
-       "      <td>2.304115</td>\n",
-       "      <td>0.734486</td>\n",
-       "      <td>1.696395</td>\n",
-       "      <td>0.136285</td>\n",
-       "      <td>-0.518344</td>\n",
-       "      <td>0.502640</td>\n",
-       "      <td>-1.852504</td>\n",
-       "      <td>-0.500665</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.744152</td>\n",
-       "      <td>0.794438</td>\n",
-       "      <td>0.265185</td>\n",
-       "      <td>-0.561809</td>\n",
-       "      <td>0.196480</td>\n",
-       "      <td>0.373434</td>\n",
-       "      <td>6.206995</td>\n",
-       "      <td>3.809505</td>\n",
-       "      <td>1.236486</td>\n",
-       "      <td>1.182055</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.380940</td>\n",
-       "      <td>-0.499626</td>\n",
-       "      <td>-0.418548</td>\n",
-       "      <td>1.911725</td>\n",
-       "      <td>-0.826130</td>\n",
-       "      <td>-1.715371</td>\n",
-       "      <td>-0.577091</td>\n",
-       "      <td>-1.041486</td>\n",
-       "      <td>0.596067</td>\n",
-       "      <td>-0.363425</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-2.895826</td>\n",
-       "      <td>-0.738275</td>\n",
-       "      <td>2.361818</td>\n",
-       "      <td>-0.060753</td>\n",
-       "      <td>0.727249</td>\n",
-       "      <td>-0.271882</td>\n",
-       "      <td>5.232157</td>\n",
-       "      <td>-4.218259</td>\n",
-       "      <td>-2.724883</td>\n",
-       "      <td>-0.063775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.256023</td>\n",
-       "      <td>-1.059874</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.345678</td>\n",
-       "      <td>1.513814</td>\n",
-       "      <td>1.243864</td>\n",
-       "      <td>-0.509648</td>\n",
-       "      <td>-0.800481</td>\n",
-       "      <td>-0.115945</td>\n",
-       "      <td>0.595777</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.252834</td>\n",
-       "      <td>0.472496</td>\n",
-       "      <td>2.491386</td>\n",
-       "      <td>0.353381</td>\n",
-       "      <td>-0.260682</td>\n",
-       "      <td>-0.000833</td>\n",
-       "      <td>-0.116457</td>\n",
-       "      <td>-2.131747</td>\n",
-       "      <td>3.661499</td>\n",
-       "      <td>-0.131576</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.728420</td>\n",
-       "      <td>-2.432399</td>\n",
-       "      <td>-2.453602</td>\n",
-       "      <td>-0.020509</td>\n",
-       "      <td>0.333397</td>\n",
-       "      <td>0.086049</td>\n",
-       "      <td>-1.787601</td>\n",
-       "      <td>0.667011</td>\n",
-       "      <td>0.761564</td>\n",
-       "      <td>-2.217847</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.004600</td>\n",
-       "      <td>-4.664806</td>\n",
-       "      <td>-0.847211</td>\n",
-       "      <td>-0.264249</td>\n",
-       "      <td>0.664334</td>\n",
-       "      <td>-0.557868</td>\n",
-       "      <td>8.499483</td>\n",
-       "      <td>-4.738799</td>\n",
-       "      <td>-3.054611</td>\n",
-       "      <td>0.494152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.590212</td>\n",
-       "      <td>-0.066127</td>\n",
-       "      <td>0.468009</td>\n",
-       "      <td>-1.096038</td>\n",
-       "      <td>0.119399</td>\n",
-       "      <td>-1.809710</td>\n",
-       "      <td>0.466358</td>\n",
-       "      <td>-0.053196</td>\n",
-       "      <td>-0.580320</td>\n",
-       "      <td>-1.143500</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.976937</td>\n",
-       "      <td>2.558883</td>\n",
-       "      <td>3.377724</td>\n",
-       "      <td>0.846891</td>\n",
-       "      <td>0.696032</td>\n",
-       "      <td>0.554121</td>\n",
-       "      <td>-5.979714</td>\n",
-       "      <td>-2.869631</td>\n",
-       "      <td>3.733057</td>\n",
-       "      <td>-0.722943</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 80 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           F_1_0     F_1_1     F_1_2     F_1_3     F_1_4     F_1_5     F_1_6  \\\n",
-       "row_id                                                                         \n",
-       "0      -0.354591 -0.464038  2.304115  0.734486  1.696395  0.136285 -0.518344   \n",
-       "1       1.380940 -0.499626 -0.418548  1.911725 -0.826130 -1.715371 -0.577091   \n",
-       "2       0.256023 -1.059874       NaN  0.345678  1.513814  1.243864 -0.509648   \n",
-       "3      -0.728420 -2.432399 -2.453602 -0.020509  0.333397  0.086049 -1.787601   \n",
-       "4       0.590212 -0.066127  0.468009 -1.096038  0.119399 -1.809710  0.466358   \n",
-       "\n",
-       "           F_1_7     F_1_8     F_1_9  ...     F_4_5     F_4_6     F_4_7  \\\n",
-       "row_id                                ...                                 \n",
-       "0       0.502640 -1.852504 -0.500665  ...  3.744152  0.794438  0.265185   \n",
-       "1      -1.041486  0.596067 -0.363425  ... -2.895826 -0.738275  2.361818   \n",
-       "2      -0.800481 -0.115945  0.595777  ...  2.252834  0.472496  2.491386   \n",
-       "3       0.667011  0.761564 -2.217847  ...  2.004600 -4.664806 -0.847211   \n",
-       "4      -0.053196 -0.580320 -1.143500  ...  0.976937  2.558883  3.377724   \n",
-       "\n",
-       "           F_4_8     F_4_9    F_4_10    F_4_11    F_4_12    F_4_13    F_4_14  \n",
-       "row_id                                                                        \n",
-       "0      -0.561809  0.196480  0.373434  6.206995  3.809505  1.236486  1.182055  \n",
-       "1      -0.060753  0.727249 -0.271882  5.232157 -4.218259 -2.724883 -0.063775  \n",
-       "2       0.353381 -0.260682 -0.000833 -0.116457 -2.131747  3.661499 -0.131576  \n",
-       "3      -0.264249  0.664334 -0.557868  8.499483 -4.738799 -3.054611  0.494152  \n",
-       "4       0.846891  0.696032  0.554121 -5.979714 -2.869631  3.733057 -0.722943  \n",
-       "\n",
-       "[5 rows x 80 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aux.data.head()"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.utils import parallel_backend\n",
+    "from joblib import Parallel, delayed"
    ]
   },
   {
@@ -447,39 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## cosine similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # collect individual stats for each item containing NaN based on similar items with specified cosine similarity threshold\n",
-    "# # NOTE this will take ~35hours\n",
-    "# from sklearn.metrics.pairwise import cosine_similarity\n",
-    "\n",
-    "# threshold = 0.9\n",
-    "\n",
-    "# nan_rows = aux.data.isna().any(axis=1)\n",
-    "# index = aux.data[nan_rows].index\n",
-    "# stats = {}\n",
-    "\n",
-    "# for row_idx in tqdm(aux.data[nan_rows].index):\n",
-    "#     exclude_own = aux.subset[2].index != row_idx\n",
-    "#     target = aux.subset[2].loc[exclude_own, :].copy()\n",
-    "#     # calculate cosine similarity between this and all other items\n",
-    "#     sim = cosine_similarity([aux.subset[2].loc[row_idx, :]], target)\n",
-    "#     target['cosine'] = sim[0]\n",
-    "#     # apply threshold and sort\n",
-    "#     mask = target['cosine'] > threshold\n",
-    "#     similars = target.loc[mask, 'cosine'].sort_values(ascending=False).index\n",
-    "#     # get statistics\n",
-    "#     stats[row_idx] = aux.data.loc[similars, :].mean()\n",
-    "\n",
-    "# stats = pd.DataFrame(stats).T\n",
-    "# stats.to_csv('data/similars.csv')"
+    "## cosine"
    ]
   },
   {
@@ -488,126 +220,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # MANUAL\n",
     "# from sklearn.metrics.pairwise import cosine_similarity\n",
-    "# from sklearn.utils import parallel_backend\n",
-    "# from joblib import Parallel, delayed\n",
+    "# chunksize = 100\n",
+    "# threshold = None\n",
+    "# k = 50\n",
+    "# df = aux.data.iloc[:1000]\n",
     "\n",
-    "# threshold = 0.9\n",
-    "# nan_rows = aux.data.isna().any(axis=1)\n",
-    "# index = aux.data[nan_rows].index\n",
+    "# use_cols = df.columns[~df.isna().any()]     # select columns without NaN\n",
+    "# nan_rows = df.isna().any(axis=1)\n",
     "\n",
+    "# stats = []\n",
+    "# df_size = df[nan_rows].index.size\n",
+    "# chunk_count = df_size // chunksize + (1 if df_size % chunksize else 0)\n",
+    "# # iterate through chunks\n",
+    "# for start_idx in tqdm(range(0, df_size, chunksize), total=chunk_count):\n",
+    "#     end_idx = start_idx + chunksize\n",
+    "#     cosine = cosine_similarity(df.loc[nan_rows, use_cols].iloc[start_idx:end_idx], df[use_cols])\n",
     "\n",
-    "# def calc_stats(idx, base, target, *, threshold=0.9):\n",
-    "#     \"\"\"\n",
-    "#     :param idx - index of current item\n",
-    "#     :param base - dataset for cosine similarity calculation\n",
-    "#     :param target - dataset for statistics calculation\n",
-    "#     :threshold - minimal accepted cosine value\n",
-    "#     \"\"\"\n",
-    "#     # calculate cosine similarity between this and all other items\n",
-    "#     cosine = cosine_similarity([base.loc[idx, :]], base)[0]\n",
-    "#     sim = pd.Series(cosine, index=base.index, name='cosine')\n",
-    "#     # apply threshold and sort\n",
-    "#     mask = (sim > threshold) & (sim.index != idx)\n",
-    "#     similars = sim[mask].sort_values(ascending=False).index\n",
-    "\n",
-    "#     # get statistics\n",
-    "#     return idx, target.loc[similars, :].mean()\n",
-    "\n",
-    "# def impute_cosine(base, target):\n",
-    "#     with parallel_backend('threading'):\n",
-    "#         result = dict(Parallel(n_jobs=-1)(delayed(calc_stats)(idx, base, target) for idx in tqdm(index[:100])))\n",
-    "#     return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stats = pd.DataFrame(impute_cosine(aux.subset[2], aux.subset[1])).T\n",
-    "# stats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## cosine with columns autodetection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.utils import parallel_backend\n",
-    "from joblib import Parallel, delayed\n",
-    "\n",
-    "\n",
-    "def calc_stats(idx, df, threshold=0.9):\n",
-    "    \"\"\"\n",
-    "    :param idx - index of current item\n",
-    "    :param df - original dataset\n",
-    "    :threshold - minimal accepted cosine value\n",
-    "    \"\"\"\n",
-    "    # get columns without NaN\n",
-    "    cols = df.columns[~df.isna().any()]\n",
-    "\n",
-    "    # calculate cosine similarity between this and all other items\n",
-    "    cosine = cosine_similarity([df.loc[idx, cols]], df[cols])[0]\n",
-    "    sim = pd.Series(cosine, index=df.index, name='cosine')\n",
-    "    # apply threshold and sort\n",
-    "    mask = (sim > threshold) & (sim.index != idx)\n",
-    "    similars = sim[mask].sort_values(ascending=False).index\n",
-    "    # get statistics\n",
-    "    return idx, df.loc[similars, :].mean()\n",
-    "\n",
-    "def impute_cosine(df, threshold=0.9, backend='threading'):\n",
-    "    nan_rows = df.isna().any(axis=1)\n",
-    "    index = df[nan_rows].index\n",
-    "\n",
-    "    with parallel_backend(backend):\n",
-    "        result = dict(Parallel(n_jobs=-1)(delayed(calc_stats)(idx, df, threshold) for idx in tqdm(index)))\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats = pd.DataFrame(impute_cosine(aux.data, threshold=0.7, backend='loky')).T\n",
-    "stats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## tests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# arr = aux.subset[2].to_numpy().copy()\n",
-    "# for idx in tqdm(aux.subset[2].index[:18]):\n",
-    "#     cosine_similarity([aux.subset[2].iloc[0]], arr)[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## submission"
+    "#     if threshold is not None:       # collect by threshold\n",
+    "#         mask = cosine > threshold       # apply threshold\n",
+    "#         np.fill_diagonal(mask, False)   # exclude ownes\n",
+    "#         # stats.extend(list(map(lambda m: df[m].mean().to_list(), mask)))\n",
+    "#         stats.extend(np.apply_along_axis(lambda m: df[m].mean(), 1, mask))\n",
+    "#     elif k is not None:     # collect by k nearest\n",
+    "#         # stats.extend(list(map(lambda c: df.iloc[np.argsort(c)[::-1][1:]].head(k).mean(), cosine)))\n",
+    "#         stats.extend(np.apply_along_axis(lambda c: df.iloc[np.argsort(c)[::-1][1:]].head(k).mean(), 1, cosine))\n",
+    "# pd.DataFrame(stats, index=df[nan_rows].index)"
    ]
   },
   {
@@ -615,8 +254,85 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "aux.save_submission(predicted)"
+    "%%time\n",
+    "csim = aux.CosineSimilarity(aux.data.iloc[:50000])\n",
+    "# stats = csim.calculate(threshold=0.7, backend='threading')\n",
+    "stats = csim.calculate(k=50000, backend=None, chunksize=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "csim = aux.CosineSimilarity(aux.data.iloc[:50000])\n",
+    "# stats = csim.calculate(threshold=0.7, backend='threading')\n",
+    "stats = csim.calculate(k=50000, backend='loky', chunksize=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chunks: 25410\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 176/25410 [31:39<12:18:39,  1.76s/it] "
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "csim = aux.CosineSimilarity(aux.data)\n",
+    "# stats = csim.calculate(threshold=0.7, backend='threading')\n",
+    "stats = csim.calculate(k=50000, backend='loky', chunksize=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import gc\n",
+    "# gc.collect()"
    ]
   },
   {
