Impl. mean matching approach
add autosplit parameter to Step
change @deprecated usage

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -12,7 +12,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from lightgbm import LGBMRegressor"
+    "from lightgbm import LGBMRegressor\n",
+    "from sklearn.linear_model import SGDRegressor"
    ]
   },
   {
@@ -61,7 +62,7 @@
     "predicted = aux.ImputeHelper(\n",
     "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
     "    aux.Step(aux.simplestat, aux.subcol[1] + aux.subcol[3], imputer=SimpleImputer(strategy='mean')),\n",
-    ").run(aux.data, inherit=True)"
+    ").run(aux.data)"
    ]
   },
   {
@@ -73,10 +74,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Collect remapper: 100%|██████████| 80/80 [00:02<00:00, 39.02it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kaggle 1.41\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.mean_matching, 'all', N=50000, init=SimpleImputer(), autosplit=False, backend='threading'),\n",
+    "# ).run(aux.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TRY THIS with different N: 500 / 5000 / 25000\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "    aux.Step(aux.mean_matching, aux.subcol[1] + aux.subcol[3], N=5000, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=23), backend='threading'),\n",
+    ").run(aux.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initiate values: 100%|██████████| 55/55 [03:31<00:00,  3.85s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initiator avg. score: 1.7886967598531844\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Collect remapper: 100%|██████████| 80/80 [06:30<00:00,  4.88s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kaggle 1.41\n",
+    "# predicted = aux.ImputeHelper(\n",
+    "#     aux.Step(aux.mean_matching, 'all', N=5000, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=7), backend='threading'),\n",
+    "# ).run(aux.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predicted.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.mean_matching, 'all', N=5000, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=7), backend='threading', autosplit=False),\n",
+    ").run(aux.data)"
+   ]
   },
   {
    "cell_type": "code",
@@ -94,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -133,27 +214,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0-F_1_14</td>\n",
-       "      <td>-0.000905</td>\n",
+       "      <td>0.003307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0-F_3_23</td>\n",
-       "      <td>0.000365</td>\n",
+       "      <td>-0.010349</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1-F_3_24</td>\n",
-       "      <td>-0.000817</td>\n",
+       "      <td>0.021233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2-F_1_2</td>\n",
-       "      <td>0.000551</td>\n",
+       "      <td>-0.016865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2-F_4_2</td>\n",
-       "      <td>0.324838</td>\n",
+       "      <td>-0.055259</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -161,14 +242,14 @@
       ],
       "text/plain": [
        "    row-col     value\n",
-       "0  0-F_1_14 -0.000905\n",
-       "1  0-F_3_23  0.000365\n",
-       "2  1-F_3_24 -0.000817\n",
-       "3   2-F_1_2  0.000551\n",
-       "4   2-F_4_2  0.324838"
+       "0  0-F_1_14  0.003307\n",
+       "1  0-F_3_23 -0.010349\n",
+       "2  1-F_3_24  0.021233\n",
+       "3   2-F_1_2 -0.016865\n",
+       "4   2-F_4_2 -0.055259"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
